--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://cdn.countryflags.com/thumbs/united-arab-emirates/flag-round-250.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>UAE Holiday Countdown 2021</title>
 </head>
